# joinmarket-ng

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  README-joinmarket-ng.md  README.md  complexipy.toml  config.toml.template  conftest.py  docker-compose.jam-ng-signet.yml  docker-compose.yml  install.sh  license.md  mkdocs.yml  pytest.ini  requirements-docs.txt  switch-urls.sh
completions/: jm-maker.bash  jm-maker.zsh  jm-taker.bash  jm-taker.zsh  jm-tumbler.bash  jm-tumbler.zsh  jm-wallet.bash  jm-wallet.zsh  jmwalletd.bash  jmwalletd.zsh
directory_server/: Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
docs/: README-directory-server.md  README-jmcore.md  README-jmwallet.md  README-jmwalletd.md  README-maker.md  README-orderbook-watcher.md  README-raspiblitz-tui.md  README-scripts.md  README-signatures.md  README-taker.md  README-tui.md  README-tumbler.md  extension-documentation.md  index.md  install.md
electrs/: config.toml
electrum_swap_server/: Dockerfile  entrypoint.sh
flatpak/: jam-ng-entrypoint.sh  org.joinmarketng.JamNG.desktop  org.joinmarketng.JamNG.metainfo.xml  org.joinmarketng.JamNG.yml
jm_tumbler/: README.md  pyproject.toml
jmcore/: README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
jmwallet/: README.md  pyproject.toml  requirements-dev.txt  requirements.txt
jmwalletd/: Dockerfile  README.md  pyproject.toml  requirements-dev.txt  (+1 more)
mock_swap_provider/: Dockerfile  pyproject.toml
mock_swap_provider/src/mock_swap_provider/: __init__.py  htlc.py  lnd.py  main.py  rpc.py
(+503 files in other folders)
