[project]
name = "mock-swap-provider"
version = "0.1.0"
description = "Mock submarine swap provider for regtest testing"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.29.0",
    "httpx>=0.25.0",
    # coincurve <21.0.0 does not support Python 3.14
    # coincurve 21.0.0 has a bug that prevents installation on 3.14
    # See: https://github.com/ofek/coincurve/issues/219
    "coincurve @ https://github.com/ofek/coincurve/archive/7829b29c08ebb1cc80386a1cdaf8c2243c4ef5c5.zip",
    "loguru>=0.7.0",
    "pydantic>=2.0.0",
    "bech32>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
]

[project.scripts]
mock-swap-provider = "mock_swap_provider.main:main"

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
